--- a/vercel.json
+++ b/vercel.json
@@ -2,5 +2,6 @@
   "framework": "nextjs",
   "installCommand": "cd absen-smp && npm install",
   "buildCommand": "cd absen-smp && npm run build",
-  "outputDirectory": "absen-smp/.next"
+  "outputDirectory": "absen-smp/.next",
+  "rootDirectory": "absen-smp"
 }
